--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -144,4 +144,8 @@
 	.scroll-up nav {
 		filter: drop-shadow(0 -10px 20px rgb(170, 170, 170));
 	}
+
+	.project-image:hover {
+		cursor: url('/images/custom-cursor.png'), auto;
+	}
 }
